--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
  <nav>
  	<ul>
  		<li>
- 			<a href=""> How to assingnment</a>
- 			<a href=""> Color Exercise</a>
- 			<a href=""> Interative Story</a>
- 			<a href=""> Mini-Magazine</a>
+ 			<a href=""> How to assingnment</a></li>
+ 			<li><a href=""> Color Exercise</a></li>
+ 			<li><a href=""> Interative Story</a></li>
+ 			<li><a href=""> Mini-Magazine</a></li>
  			<a href=""></a>
- 		</li>
+ 		
  	</ul>
  </nav>
 </body>
