--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 </head>
 
 <body>
-<h1> Table 0f Content</h1>
+<h1> Table of Content</h1>
  <nav>
  	<ul>
- 		<li>
- 			<a href=""> How to assingnment</a></li>
+ 		    <li><a href="class2.html"> How to assingnment</a></li>
  			<li><a href=""> Color Exercise</a></li>
  			<li><a href=""> Interative Story</a></li>
  			<li><a href=""> Mini-Magazine</a></li>
