--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  			<li><a href=""> Color Exercise</a></li>
  			<li><a href="food/index.html"> Interative Story</a></li>
  			<li><a href=""> Mini-Magazine</a></li>
- 			<a href=""></a>
+ 			<a href="box/boxes.html">Box Model Practice</a>
  		
  	</ul>
  </nav>
