--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <nav>
  	<ul>
  		    <li><a href="class2.html"> How to assingnment</a></li>
- 			<li><a href=""> Color Exercise</a></li>
+ 			<li><a href="color/index.html"> Color Exercise</a></li>
  			<li><a href="food/index.html"> Interative Story</a></li>
  			<li><a href=""> Mini-Magazine</a></li>
  			<a href="box/boxes.html">Box Model Practice</a>
