--- a/color/index.html
+++ b/color/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="title">
-	<h1><a href="manhattanhenge.html">NYC</a></h1>
+	<h1><a href="manhattanhenge.html">New York City</a></h1>
 	</div>
 </body>
 </html>
