--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
  			<li><a href="color/index.html"> Color Exercise</a></li>
  			<li><a href="food/index.html"> Interative Story</a></li>
  			<li><a href=""> Mini-Magazine</a></li>
- 			<a href="box/boxes.html">Box Model Practice</a>
+ 			<li><a href="box/boxes.html">Box Model Practice</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+      
  		
  	</ul>
  </nav>
